fix: :bug: Static Header and footer alignment fixed

--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -4,6 +4,10 @@
     @media (max-width: 899px) { @content; }
 }
 
+@mixin tab {
+    @media (max-width: 1280px) { @content; }
+}
+
 .nav-container {
     text-transform: uppercase;
     z-index: $zIndex1;
@@ -26,7 +30,7 @@
         color: $acid;
         @include mobile { 
             font-size: $fontSizeMobile;
-            position: sticky;
+            margin-left: -$buffer;
         }
         Button {
             background-color: transparent;
@@ -45,6 +49,11 @@
         }
         span:hover {
             animation: .8s jump ease infinite alternate, changeColor step-end infinite;
+        }
+        .speedboat {
+            :hover {
+                background-color: yellow;
+            }
         }
         .shop {
             display: inline-block; 
@@ -65,15 +74,10 @@
         white-space: nowrap;
         background-color: transparent;
         z-index: $zIndex2;
+        text-align: left !important;
         @include mobile { 
             font-size: $fontSizeSmall;
             font-family: $primaryFont;
-        }
-        .first {
-            padding-left: 14px
-        }
-        .test {
-            padding-left: 15px;
         }
         .and {
             animation: changeColor step-end infinite;
@@ -98,11 +102,20 @@
                 -webkit-animation: .8s jump ease infinite alternate, changeColor step-end infinite;
             }
             .instagram {
-                margin-left: 0;
+                margin-left: -25px;
+                @include mobile { 
+                    margin-left: 0 !important;
+                }
+                @include tab {
+                    margin-left: 0 !important;
+                }
             }
             .phoneNumber {
-                margin-left: -$margin;
+                margin-left: -40px;
                 @include mobile { 
+                    margin-left: 0 !important;
+                }
+                @include tab {
                     margin-left: 0 !important;
                 }
             }
